[gd_scene load_steps=5 format=3 uid="uid://c5qra4gg2s7ru"]

[ext_resource type="FontFile" uid="uid://7kk4yqg6nmxs" path="res://Assets/m5x7.ttf" id="1_1dedy"]
[ext_resource type="Script" path="res://Scenes/Menu/game_over.gd" id="1_ssvox"]
[ext_resource type="Theme" uid="uid://crpwwkv86fwfa" path="res://button_theme.tres" id="3_gaobl"]
[ext_resource type="AudioStream" uid="uid://ctakppq0oro6y" path="res://Assets/Audio/Select 1.wav" id="3_rojgr"]

[node name="GameOver" type="CanvasLayer" groups=["Persist"]]
process_mode = 2
visible = false
script = ExtResource("1_ssvox")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 359.0
offset_top = 143.0
offset_right = 826.0
offset_bottom = 467.0
pivot_offset = Vector2(234, 162)

[node name="Panel" type="Panel" parent="Control"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = -362.0
offset_top = -148.0
offset_right = 798.0
offset_bottom = 509.0

[node name="Title" type="Label" parent="Control"]
layout_mode = 2
offset_right = 467.0
offset_bottom = 117.0
theme_override_fonts/font = ExtResource("1_1dedy")
theme_override_font_sizes/font_size = 100
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 129.0
offset_top = 117.0
offset_right = 329.0
offset_bottom = 141.0
theme_override_fonts/font = ExtResource("1_1dedy")
theme_override_font_sizes/font_size = 30
text = "Scored:"
horizontal_alignment = 1

[node name="Score" type="Label" parent="Control"]
layout_mode = 0
offset_left = 196.0
offset_top = 141.0
offset_right = 262.0
offset_bottom = 203.0
theme_override_fonts/font = ExtResource("1_1dedy")
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 0
offset_left = 99.0
offset_top = 203.0
offset_right = 359.0
offset_bottom = 336.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="PlayAgain" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_gaobl")
theme_override_font_sizes/font_size = 50
text = "Play Again"

[node name="Exit" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_gaobl")
text = "Exit "

[node name="SelectFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_rojgr")

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="focus_entered" from="Control/MarginContainer/VBoxContainer/PlayAgain" to="." method="_on_play_again_focus_entered"]
[connection signal="mouse_entered" from="Control/MarginContainer/VBoxContainer/PlayAgain" to="." method="_on_play_again_mouse_entered"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="focus_entered" from="Control/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_focus_entered"]
[connection signal="mouse_entered" from="Control/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_mouse_entered"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
